# jami-client-android

./: .cqfdrc  .gitignore  .gitignore~  .gitmodules  .gitreview  AGENTS.md  AndroidManifest.xml  COPYING  DELETEME  Makefile  README  README.md  adb-push-sflphone.sh  ant.properties  build-daemon.sh  build.gradle  build.xml  build.yml  compile.sh  configure.sh  cqfd  fdroidMergeRequest.sh  getNDKVersion.sh  google-services.json  groups  id_rsa.pub  jenkins-sflphone-android.sh  launch-sflphone.sh  local.properties  make-glue.sh  make-swig.sh  pp  project.config  start_emu_headless.sh  test.sh  update-translations.sh  update_version.py
jni/ccrtp-1.8.0-android/demo/: Makefile.am  audio.h  ccsrtptest.cpp  rtplisten.cpp
jni/ccrtp-1.8.0-android/m4/: Makefile  Makefile.am  libgcrypt_local.m4
jni/ccrtp-1.8.0-android/phone/: Makefile.am  config.cpp  phone.cpp  phone.h  rtp.cpp  server.cpp
jni/ccrtp-android/: Makefile.am  autogen.sh  ccrtp.spec.in  config.status  envsetup.sh  libccrtp.spec.in
jni/ccrtp-android/autom4te.cache/: requests
jni/ccrtp-android/demo/: README  ccrtptest.cpp  rtpduphello.cpp  rtphello.cpp  rtpsend.cpp
jni/ccrtp-android/doc/: Doxyfile  ccrtp.info  srcmodel.dia
jni/ccrtp-android/m4/: Makefile.in  ost_prog.m4
jni/ccrtp-android/phone/: Makefile  phone.conf  server.h
jni/ccrtp-android/src/: Makefile.am  config.h  pool.cpp  queue.cpp  rtcppkt.cpp  source.cpp
jni/ccrtp-android/w32/: Makefile  Makefile.in
jni/commoncpp2-1.8.1-android/demo/: Makefile.am  SampleSocketPort.cpp  SampleSocketPort.h  crc32.cpp  dccpclient.cpp  dccpserver.cpp  dir.cpp  serialecho.h  slogTest.cpp  str.cpp  tcpthread.cpp  timer.cpp  urlfetch.cpp
jni/commoncpp2-1.8.1-android/inc/: Makefile  Makefile.am  config.tmp
jni/commoncpp2-1.8.1-android/src/: Android.mk  Makefile  Makefile.am  Makefile.in  buffer.cpp  cmdoptns.cpp  date.cpp  friends.cpp  getopt.c  getopt1.c  in6addr.cpp  inaddr.cpp  keydata.cpp  libccext2.pc.in  libccgnu2.pc.in  lockfile.cpp  md5.cpp  missing.cpp  mutex.cpp  nat.cpp  nat.h  network.cpp  numbers.cpp  ost_check2.m4  private.h  socketport.cpp  ssl.cpp  thread.cpp  threadkey.cpp  timer.cpp  tokenizer.cpp  url.cpp  zstream.cpp
jni/commoncpp2-1.8.1-android/tests/: Makefile  Makefile.am  Makefile.in  README  SampleObject.cpp  SampleObject.h  Test_Date.h  Test_Digest.h  Test_SHATumbler.h  Test_TCPStream.cpp  Test_TCPStream.h  Test_URLString.h  bug1.cpp  digest.cpp  dotests.sh  forever.cpp  output.txt  thread1.cpp  thread2.cpp  vc6.mak
jni/commoncpp2-1.8.1-android/w32/: Makefile.am  Makefile.bcc  Makefile.gcc  ccext2.vcproj.in  ccgnu2.vcproj  common.reg  common.sln  debug.bat
jni/commoncpp2-android/: 0003-android-adapt-commoncpp.patch  Android.mk  SUPPORT  aclocal.m4  commoncpp2.list  commoncpp2.list.in  commoncpp2.spec  config.status  configure.ac
jni/commoncpp2-android/autom4te.cache/: traces.0  traces.1
jni/commoncpp2-android/demo/: Makefile  cmdlineopt.cpp  serialmain.cpp
jni/commoncpp2-android/doc/: Doxyfile.in  Makefile  commoncpp2.info
jni/commoncpp2-android/m4/: Makefile.am  ost_dynamic.m4  ost_pthread.m4  ost_signal.m4  ost_string.m4  win32msc.m4
jni/commoncpp2-android/sources/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  envsetup.sh
jni/commoncpp2-android/src/: assoc.cpp  ccgnu2-config  ccgnu2-config.in  cidr.cpp  digest.cpp  dir.cpp  event.cpp  file.cpp  getopt.h  libccext2.pc  libccgnu2.pc  linked.cpp  pointer.cpp  process.cpp  semaphore.cpp  serial.cpp  simplesocket.cpp  slog.cpp  socket.cpp  unix.cpp
jni/commoncpp2-android/tests/: SampleSubObject.cpp  Test_Engine.cpp  Test_Engine.h  bug2.cpp  ccxx_tests.cpp  tcpstr1.cpp  test.sh
jni/commoncpp2-android/w32/: Makefile  Makefile.in  ccgnu2.dsp.in  common.dsw
jni/dbus/: .gitignore  AUTHORS  AndroidManifest.xml  Doxyfile.in  HACKING  INSTALL  Makefile.am  Makefile.cvs  NEWS  README  README.cygwin  README.dbus4win  README.windbus  ThirdPartyProject.prop  acinclude.m4  autogen.sh  config.h  configure.in  dbus-1.pc.in  project.properties  update-dbus-docs.sh
jni/dbus/bus/: .gitignore  Android.mk  Makefile.am  NOTICE  activation-helper-bin.c  activation-helper.c  activation.c  bus.c  bus.h  config-loader-libxml.c  config-parser-common.c  config-parser-common.h  config-parser-trivial.c  config-parser.c  connection.c  connection.h  dbus-daemon.1.in  dbus.service.in  desktop-file.c  desktop-file.h  dir-watch-dnotify.c  dir-watch-inotify.c  dir-watch-kqueue.c  dispatch.c  driver.c  expirelist.c  main.c  messagebus-config  policy.c  policy.h  selinux.c  services.c  session.conf.in  signals.c  signals.h  test-launch-helper.c  test-main.c  test-system.c  test.c  test.h
jni/dbus/cmake/: CMakeLists.txt  ConfigureChecks.cmake  Doxyfile.cmake  config.h.cmake  cross-compile.sh  dbus-env.bat.cmake  readme-cmake.txt
jni/dbus/dbus/: .gitignore  Android.mk  Android.mk.stubbed  Makefile.am  dbus-address.c  dbus-arch-deps.h.in  dbus-auth-script.c  dbus-auth-util.c  dbus-auth.c  dbus-bus.c  dbus-connection.c  dbus-connection.h  dbus-credentials-util.c  dbus-credentials.c  dbus-dataslot.c  dbus-errors.c  dbus-file-win.c  dbus-hash.c  dbus-internals.c  dbus-internals.h  dbus-keyring.c  dbus-list.c  dbus-mainloop.c  dbus-marshal-basic.c  dbus-marshal-byteswap-util.c  dbus-marshal-byteswap.c  dbus-marshal-header.c  dbus-marshal-recursive-util.c  dbus-marshal-recursive.c  dbus-marshal-validate-util.c  dbus-marshal-validate.c  dbus-marshal-validate.h  dbus-md5.c  dbus-md5.h  dbus-memory.c  dbus-mempool.c  dbus-message-factory.c  (+41 more)
jni/libdbus-c++-0.9.0-android/: Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  bootstrap  config.h  config.h.in  config.status  configure  configure.ac  dbus-c++-1-uninstalled.pc  dbus-c++-1-uninstalled.pc.in  dbus-c++-1.pc  dbus-c++-1.pc.in  dbus-c++-ecore-1-uninstalled.pc  dbus-c++-ecore-1-uninstalled.pc.in  dbus-c++-ecore-1.pc  dbus-c++-ecore-1.pc.in  dbus-c++-glib-1-uninstalled.pc  dbus-c++-glib-1-uninstalled.pc.in  dbus-c++-glib-1.pc  dbus-c++-glib-1.pc.in  envsetup.sh  libdbus-c++.spec  libdbus-c++.spec.in  libtool
(+7055 files in other folders)
